# ChangeLog for sys-libs/db
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/db/ChangeLog,v 1.208 2007/05/29 01:08:54 jer Exp $

  29 May 2007; Jeroen Roovers <jer@gentoo.org> db-4.3.29-r2.ebuild:
  Trivial whitespace fix.

  24 Apr 2007; Bryan Østergaard <kloeri@gentoo.org> db-4.2.52_p4-r2.ebuild:
  Stable on Mips, bug 168726.

  23 Apr 2007; Raúl Porcel <armin76@gentoo.org> db-4.3.29-r2.ebuild:
  ia64 stable

  16 Apr 2007; Markus Rothe <corsair@gentoo.org> db-4.3.29-r2.ebuild:
  Stable on ppc64

  04 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org> db-4.3.29-r2.ebuild:
  Stable on sparc

  31 Mar 2007; Christian Faulhammer <opfer@gentoo.org> db-4.3.29-r2.ebuild:
  stable x86, security bug #170828

  29 Mar 2007; Tobias Scherbaum <dertobi123@gentoo.org> db-4.3.29-r2.ebuild:
  Stable on ppc wrt bug #170828.

  25 Mar 2007; Paul de Vrieze <pauldv@gentoo.org> db-4.5.20_p2.ebuild:
  Have a different fix for not stripping as the old fix no longer works for this
  db version.

  02 Mar 2007; Caleb Tennis <caleb@gentoo.org> -files/db-4.1.25-java.patch,
  -files/db-4.1.25-uclibc.patch, -files/db-4.1.25_p1-jarlocation.patch,
  -db-4.0.14-r2.ebuild, -db-4.0.14-r3.ebuild, -db-4.1.25_p1-r3.ebuild,
  -db-4.1.25_p1-r4.ebuild, -db-4.1.25_p2.ebuild:
  Okay, I did it. I removed db 4.0 and db 4.1. I announced it on -dev and
  there are no explicit deps on it, so it shouldn't create any issues.
  However, if it does, please open a bug and let me know.

  28 Feb 2007; Caleb Tennis <caleb@gentoo.org> db-4.4.20_p4.ebuild,
  db-4.5.20_p2.ebuild:
  Update 4.4 and 4.5 to use econf instead of gnuconfig_update per bug #160192

  27 Feb 2007; Caleb Tennis <caleb@gentoo.org> db-4.5.20_p2.ebuild:
  Paul asked to turn uniquename off, since it causes too many issues

  27 Feb 2007; Caleb Tennis <caleb@gentoo.org> -db-4.2.52_p2.ebuild,
  -db-4.2.52_p4.ebuild:
  more stale versions
