@@ -18,6 +18,6 @@ DIST patch.4.5.20.1 984 RMD160 52093e6c3d952cb8193db35e45aa4462ba0772be SHA1 0d5
 DIST patch.4.5.20.2 1752 RMD160 d35069e8267f02e64e6f1be046d6cb9e75e9e720 SHA1 a3fcbc023489c059659f789d9473ac25d6d3a477 SHA256 232a93565ab1bf34db10f7513b612867bb61e0c012def7f63715800a05d07e6a
 EBUILD db-4.3.29-r2.ebuild 3813 RMD160 0582678bba65edb55a9187c082c184e4733172d6 SHA1 be09f2192bfd32011f4d9f49bcc1c323f5b425a8 SHA256 ac07f81e9e3701a4d4b5c64dcfaab0114743de2a7cb26a376ae03bb3a6dfb605
 EBUILD db-4.4.20_p4.ebuild 3788 RMD160 590aea53f1223299956f7db334e4d172fac83a72 SHA1 ab505460bd3f9c100ebb6ab16a0d41ae0dcd1c54 SHA256 97660fb1f3a41f6912e0cb787b93aec657f2c20768aa12c3e3c1991ab4b6715d
-EBUILD db-4.5.20_p2.ebuild 4140 RMD160 29e451d6552812732b8b18f673724411eb45be35 SHA1 47fb2c2c568055bb454cb78f9643d5f5b0a45c90 SHA256 7c84fe4785e00f59343d4bdf4e5a645333bcbec41d649428080a4c0d600bb9a2
-MISC ChangeLog 32302 RMD160 32ab9a9eac0da986320797e102462e904bc4ea43 SHA1 4cda0e5e9fd6b8cb2b119f2b1d78220098c39f7e SHA256 cbd649d00e06d09738841cca42304bb96529471572f8c4dfd848c569b8840faa
+EBUILD db-4.5.20_p2.ebuild 4246 RMD160 fedba3fa72486da708e5fd332cff15a9e2b2c267 SHA1 64473ff11eab3cc7f79fe7bf49a70eb19fbc6572 SHA256 b2fdbf553880f04b9f96dbed78e7d4378cf6c5e1ad76fa3b95c78bf6e0c0efe9
+MISC ChangeLog 32426 RMD160 fe44b0466d719beee3dd525886a2cd1a529eadce SHA1 d76f279bce555b8350a889f824932f77f281e634 SHA256 71bbc1cb68050f9135f7438b7dfc465cb8d6f42ef8009ea6694c6c336051aa09
 MISC metadata.xml 1651 RMD160 cbdc138b8fd0fab28ec59db03fca18f2e0e74818 SHA1 e70ae3f07e5559a43dd85fad3270b7f7f185b996 SHA256 895bfb43a1bd60170937b4523f396d5772a3914384a95105345ac1f24c606550
